<resources>

    <string name="app_name">Garbage Tracking</string>

    <string name="waste_weight_label">Kg</string>

    <string name="user_message_neutral">Ci sei quasi, manca poco!</string>
    <string name="user_message_happy">Hai fatto un buon lavoro!</string>
    <string name="user_message_sad">Non ti arrendere, puoi risparmiare soldi!</string>

    <string name="action_developer">Developer</string>

    <string name="waste_type_paper">Paper</string>
    <string name="waste_type_glass">Glass</string>
    <string name="waste_type_metal">Metal</string>
    <string name="waste_type_plastic">Plastic</string>
    <string name="waste_type_organic">Organic</string>
    <string name="label_waste_plastic">Plastic</string>
    <string name="label_waste_paper">Paper</string>
    <string name="label_waste_metal">Metal</string>
    <string name="label_waste_organic">Organic</string>
    <string name="label_waste_glass">Glass</string>
    <string name="label_waste_type">Waste type: </string>
    <string name="action_add">add</string>
    <string name="label_waste_id_start">waste:type:</string>
    <string name="action_add_waste">add waste</string>
    <string name="label_waste_id_title">ID: </string>
    <string name="label_waste_weight">Weight: </string>
    <string name="label_waste_kg">Kg</string>
    <string name="label_waste_volume">Volume:</string>
    <string name="label_waste_meters">m<sup>2</sup></string>
    <string name="label_volume_meters">m<sup>2</sup></string>
    <string name="label_waste_parameters">Parameters:</string>

</resources>
